# k1921vg015-usb-hid-cmake-ninja

./: .gitignore  CMakeLists.txt  README.txt  compile_commands.json
cmake/: riscv64-unknown-elf.cmake  sc-dt-2025.06.cmake
device/: config.json
device/Include/: K1921VG015.h  arch.h  csr.h  div_macros.h  memasm.h  mtimer.h  plic.h  retarget.h  stringify.h  system_k1921vg015.h
device/Source/: mtimer.c  plic.c  printf.c  retarget.c  riscv-irq.c  startup_k1921vg015.S  sys_init.c  system_k1921vg015.c
device/gcc/: makefile
device/ldscripts/: k1921vg015_common.lds  k1921vg015_flash.ld  k1921vg015_ram.ld
src/: main.c  usbhid.c  usbhid.h
